# rlm

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: implementation-review.md
docs/plans/: 2026-02-21-monitor-metadata-ui.md  2026-02-21-monitor-tui-refactor.md  2026-02-21-rlm-design.md  2026-02-21-rlm-implementation.md  2026-02-21-rlm-metadata.md  2026-02-21-rlm-monitor-tui.md  2026-02-21-rlm-validation.md  implementation-agent-prompt.md  implementation-loop-prompt.md  validation-agent-prompt.md
monitor/: Makefile  README.md  edge_test.go  go.mod  main.go  model.go  smoke_progress_test.go  smoke_test.go  workspace.go  workspace_test.go
rlm/: __init__.py  agent.py  main.py  prompts.py  workspace.py
skill/: rlm.md
tests/: test_agent.py  test_integration.py  test_prompts.py  test_workspace.py
tests/fixtures/: multi_section.txt  short_text.txt
